# mellea-demos

./: README.md
2026-atai/: .env  .gitignore  LICENSE  README.md  docker-compose.yml  start.sh  stop.sh
2026-atai/containers/: README.md  build_all.sh
2026-atai/containers/chromadb/: .gitignore  Dockerfile  README.md  build.sh
2026-atai/containers/langflow-intrinsics/: .dockerignore  Dockerfile  README.md  build.sh  requirements.txt
2026-atai/containers/langflow-vis/: .env.example  Dockerfile  README.md  build.sh  requirements.txt
2026-atai/flows/Citation_Generation/: Citation Generation (Intrinsic).json  Citation Generation (Prompted).json  README.md
2026-atai/flows/Clarification-ClapNQ/: Query Clarification (Intrinsic) - ClapNQ.json  Query Clarification (Prompted) - ClapNQ.json  RAG no Clarification - ClapNQ.json  README.md
2026-atai/scripts/: load-flows.sh
2026-granite-speech/: .env.example  .gitignore  README.md  pyproject.toml  run-backend.sh  run-frontend.sh
2026-granite-speech/docs/: sample.txt
2026-granite-speech/frontend/: .env.example  .gitignore  config.ts  next.config.ts  package-lock.json  package.json
2026-granite-speech/frontend/app/: globals.css  layout.tsx  page.tsx
2026-granite-speech/frontend/app/api/ivr/config/: route.ts
2026-granite-speech/frontend/app/api/offer/[sessionId]/: route.ts
2026-granite-speech/frontend/app/api/pipecat/start/: route.ts
2026-granite-speech/frontend/app/components/: GraniteSpeechDemo.tsx
2026-granite-speech/src/granite_speech_demo/: mellea_llm.py  server.py
(+79 files in other folders)
